modify the get project endpoint  with an option to retrieve graph data
