# app/schemas/monitoring_metrics.py
@@ -33,3 +33,16 @@ class BillingMetricsSchema(Schema):
                        error='show from a certain period either pass "lastmonth" or "lastweek"'
                        ),
     ])
+
+
+class ProjectGraphSchema(Schema):
+    start = fields.Date()
+    end = fields.Date()
+    set_by = fields.String(
+        validate=[
+            validate.OneOf(
+                ["year", "month"],
+                error='set_by should be "year" or "month"'
+            ),
+        ]
+    )
